--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -225,8 +225,16 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title }}</h1>
+      <h1>{{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
+      <div *ngIf="authorized">
+        <h3>Hello, {{userName}}!</h3>
+        <button (click)="logout()" class="btn btn-default">Logout</button>
+      </div>
+      <div *ngIf="!authorized">
+        <h3>Restricted</h3>
+        <button (click)="login()" class="btn btn-default">Login</button>
+      </div>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
